<resources>
    <string name="app_name">Hello Healthy</string>
    <string name="start">Start</string>
    <string name="get_ready_for">GET READY…</string>
    <string name="progress_bar">progress bar</string>
    <string name="replay">Replay</string>
    <string name="restart_set">Restart set</string>
    <string name="pause">Pause</string>
    <string name="pause_the_timer">Pause or play the timer</string>
    <string name="restart_the_exercise">Restart the exercise</string>
    <string name="restart_the_set">Restart the set</string>
    <string name="image_of_the_exercise">Image of the exercise</string>
    <string name="play">Play</string>
    <string name="note_press_the_play_button_to_start">Press the play button to start</string>
    <string name="welcome">Welcome</string>
    <string name="miccellenious">Miccellenious</string>
    <string name="chest_day">Chest Day</string>
    <string name="back_day">Back Day</string>
    <string name="bicep_day">Bicep and Arm Day</string>
    <string name="triceps_and_abs_day">Triceps and Abs Day</string>
    <string name="shoulders_day">Shoulders Day</string>
    <string name="legs_day">Legs day</string>
    <string name="are_you_sure">Are you sure?</string>
    <string name="you_have_come_this_far_n_are_you_sure_you_want_to_quite">You have come this far,\n are you sure you want to quite?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="calculate_your_bmi">Calculate your BMI</string>
    <string name="bmi_calculator">BMI Calculator</string>
    <string name="weight_in_kg">Weight (in kg)</string>
    <string name="enter_your_weight">Enter your weight</string>
    <string name="height_in_cm">Height (in cm)</string>
    <string name="your_bmi_is">Your Bmi is:</string>
    <string name="calculate">Calculate</string>
    <string name="metric_units">METRIC UNITS</string>
    <string name="us_units">US UNITS</string>
    <string name="inch">Inch</string>
    <string name="feet">Feet</string>
    <string name="weight_in_pounds">Weight (in pounds)</string>
    <string name="history">History</string>
    <string name="click_to_check_history">Click to check history</string>
    <string name="please_wait">Please wait</string>
    <string name="delete_set_performed_in_past">Delete set performed in past</string>
    <string name="no_records_available">No Records Available!</string>
    <string name="click_to_go_back_to_home">Click to go back to home</string>
    <string name="home">Home</string>
    <string name="delete_progress">Delete progress</string>
    <string name="delete_icon">Delete icon</string>
    <string name="are_you_sure_you_want_to_delete_your_progress">Are you sure you want to delete your progress?</string>
    <string name="exercises">Exercises</string>
    <string name="exercise_number">Exercise number</string>
    <string name="add_or_remove_exercises_from_miscellaneous_set">Add or remove exercises from miscellaneous set</string>
    <string name="add_or_remove_exercises_from_chest_set">Add or remove exercises from chest set</string>
    <string name="add_or_remove_exercises_from_back_set">Add or remove exercises from back set</string>
    <string name="add_or_remove_exercises_from_bicep_set">Add or remove exercises from bicep set</string>
    <string name="add_or_remove_exercises_from_tricep_and_abs_set">Add or remove exercises from tricep and abs set</string>
    <string name="add_or_remove_exercises_from_shoulder_set">Add or remove exercises from shoulder set</string>
    <string name="add_or_remove_exercises_from_leg_set">Add or remove exercises from leg set</string>
    <string name="click_to_add_or_remove_exercise">Click to add or remove exercise</string>
    <string name="this_will_only_happen_for_the_first_time">This will only happen for the first time</string>
    <string name="this_will_happen_once_only">This will happen once only</string>
</resources>