<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_marginHorizontal="32dp"
    android:background="@drawable/dialog_bg"
    android:paddingTop="10dp">

    <ImageView
        android:id="@+id/icon"
        android:layout_width="31dp"
        android:layout_height="31dp"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginStart="10dp"
        app:layout_constraintStart_toStartOf="parent"
        android:src="@drawable/ic_baseline_warning_24"
        android:contentDescription="@string/delete_icon" />

    <TextView
        android:id="@+id/titleText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toEndOf="@+id/icon"
        app:layout_constraintTop_toTopOf="parent"
        android:textSize="22sp"
        android:textColor="@color/black"
        android:layout_marginStart="5dp"
        android:textStyle="bold"
        android:text="@string/delete_progress"/>

    <TextView
        android:id="@+id/warningText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginHorizontal="16dp"
        app:layout_constraintTop_toBottomOf="@+id/titleText"
        android:textColor="@color/black"
        android:layout_marginTop="16dp"
        android:text="@string/are_you_sure_you_want_to_delete_your_progress"/>

    <Button
        android:id="@+id/yesDeleteBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/yes"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/warningText"
        android:layout_marginTop="22dp"
        android:textSize="22sp"
        android:textStyle="bold"
        android:backgroundTint="@color/teal_700"
        android:layout_marginEnd="15dp"
        android:layout_marginBottom="10dp"/>

    <Button
        android:id="@+id/noDeleteBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/no"
        android:textSize="22sp"
        android:textStyle="bold"
        android:backgroundTint="@color/teal_700"
        app:layout_constraintEnd_toStartOf="@id/yesDeleteBtn"
        android:layout_marginEnd="30dp"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="10dp"/>
</androidx.constraintlayout.widget.ConstraintLayout>