<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:background="@drawable/dialog_bg"
    android:layout_margin="8dp"
    android:padding="8dp"
    android:gravity="center_horizontal">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/are_you_sure"
        android:textColor="@color/black"
        android:textSize="22sp"
        android:layout_marginTop="8dp"
        android:textStyle="bold"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/black"
        android:textSize="20sp"
        android:layout_marginTop="16dp"
        android:gravity="center"
        android:text="@string/you_have_come_this_far_n_are_you_sure_you_want_to_quite"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="8dp"
        android:layout_marginHorizontal="22dp">

        <Button
            android:id="@+id/yesBtnBackConfirmationDialog"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/yes"
            android:layout_margin="10dp"
            android:textSize="22sp"
            android:textStyle="bold"
            android:backgroundTint="@color/teal_700"
            tools:ignore="ButtonStyle" />

        <Button
            android:id="@+id/noBtnBackConformationDialog"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/no"
            android:layout_margin="10dp"
            android:textSize="22sp"
            android:textStyle="bold"
            android:backgroundTint="@color/teal_700"
            tools:ignore="ButtonStyle" />

    </LinearLayout>

</LinearLayout>