<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:background="@drawable/ic_background_img">

    <ImageView
        android:id="@+id/iVAppName"
        android:layout_width="match_parent"
        android:layout_height="300dp"
        android:src="@drawable/ic_logo"
        android:contentDescription="@string/app_name"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">
    </ImageView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginHorizontal="48dp"
        app:layout_constraintTop_toBottomOf="@id/iVAppName"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:gravity="center">

        <FrameLayout
            android:id="@+id/fLStart"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="15dp"
            android:elevation="10dp"
            android:layout_gravity="center">

            <ImageButton
                android:id="@+id/iBStart"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/ripple_effect"
                android:contentDescription="@string/start"
                tools:ignore="DuplicateSpeakableTextCheck" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/start"
                android:layout_gravity="center"
                android:textSize="30sp"
                android:textStyle="bold"
                android:textColor="#3D1555">
            </TextView>

        </FrameLayout>

        <FrameLayout
            android:id="@+id/fLBmiCalc"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:elevation="10dp"
            android:layout_margin="15dp">

            <ImageButton
                android:id="@+id/iBBmiCalc"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:contentDescription="@string/calculate_your_bmi"
                android:background="@drawable/ripple_effect"
                tools:ignore="DuplicateSpeakableTextCheck">
            </ImageButton>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/bmi_calculator"
                android:layout_gravity="center"
                android:textSize="30sp"
                android:textStyle="bold"
                android:textColor="#3D1555">
            </TextView>

        </FrameLayout>

        <LinearLayout
            android:id="@+id/ibCheckHistory"
            android:layout_width="75dp"
            android:layout_height="75dp"
            android:orientation="vertical"
            android:layout_margin="15dp"
            android:layout_gravity="center"
            android:gravity="center"
            android:background="@drawable/ripple_history_btn">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="#00000000"
                android:contentDescription="@string/click_to_check_history"
                android:src="@drawable/ic_baseline_calendar_month_24"
                tools:ignore="RedundantDescriptionCheck" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:textSize="16sp"
                android:textStyle="bold"
                android:layout_marginBottom="1dp"
                android:textColor="@color/black"
                android:text="@string/history"/>

        </LinearLayout>

    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>